fixed overflow-x and content in slider in xs

--- a/style.css
+++ b/style.css
@@ -37,14 +37,13 @@
 .menu {
   text-align: center;
   display: flex;
-  justify-content: space-evenly;
-  overflow-x: auto;
+  justify-content: baseline;
+  overflow-x: scroll;
 }
 .menu li {
-  padding-bottom: 10px;
-  padding-top: 10px;
+  padding: 8px;
   margin: 5px;
-  font-size: 10px;
+  font-size: 14px;
 }
 .menu li :hover {
   border: 2px solid #a4aead;
@@ -63,7 +62,7 @@
   background-image: url(images/background1.png);
   background-repeat: no-repeat;
   background-position: center;
-  height: 300px;
+  height: 660px;
   color: #ffffff;
 }
 .main .slider h1 {
@@ -89,61 +88,6 @@
   border: none;
 }
 
-.col-xs-1 {
-  flex: 0 0 8.33333%;
-  max-width: 8.33333%;
-}
-
-.col-xs-2 {
-  flex: 0 0 16.66667%;
-  max-width: 16.66667%;
-}
-
-.col-xs-3 {
-  flex: 0 0 25%;
-  max-width: 25%;
-}
-
-.col-xs-4 {
-  flex: 0 0 33.33333%;
-  max-width: 33.33333%;
-}
-
-.col-xs-5 {
-  flex: 0 0 41.66667%;
-  max-width: 41.66667%;
-}
-
-.col-xs-6 {
-  flex: 0 0 50%;
-  max-width: 50%;
-}
-
-.col-xs-7 {
-  flex: 0 0 58.33333%;
-  max-width: 58.33333%;
-}
-
-.col-xs-8 {
-  flex: 0 0 66.66667%;
-  max-width: 66.66667%;
-}
-
-.col-xs-9 {
-  flex: 0 0 75%;
-  max-width: 75%;
-}
-
-.col-xs-10 {
-  flex: 0 0 83.33333%;
-  max-width: 83.33333%;
-}
-
-.col-xs-11 {
-  flex: 0 0 91.66667%;
-  max-width: 91.66667%;
-}
-
 .col-xs-12 {
   flex: 0 0 100%;
   max-width: 100%;
@@ -152,57 +96,6 @@
 @media (min-width: 768px) {
   .container {
     max-width: 720px;
-  }
-  .col-sm-1 {
-    flex: 0 0 8.33333%;
-    max-width: 8.33333%;
-  }
-  .col-sm-2 {
-    flex: 0 0 16.66667%;
-    max-width: 16.66667%;
-  }
-  .col-sm-3 {
-    flex: 0 0 25%;
-    max-width: 25%;
-  }
-  .col-sm-4 {
-    flex: 0 0 33.33333%;
-    max-width: 33.33333%;
-  }
-  .col-sm-5 {
-    flex: 0 0 41.66667%;
-    max-width: 41.66667%;
-  }
-  .col-sm-6 {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-  .col-sm-7 {
-    flex: 0 0 58.33333%;
-    max-width: 58.33333%;
-  }
-  .col-sm-8 {
-    flex: 0 0 66.66667%;
-    max-width: 66.66667%;
-  }
-  .col-sm-9 {
-    flex: 0 0 75%;
-    max-width: 75%;
-  }
-  .col-sm-10 {
-    flex: 0 0 83.33333%;
-    max-width: 83.33333%;
-  }
-  .col-sm-11 {
-    flex: 0 0 91.66667%;
-    max-width: 91.66667%;
-  }
-  .col-sm-12 {
-    flex: 0 0 100%;
-    max-width: 100%;
-  }
-  .main .slider {
-    height: 500px;
   }
 }
 @media (min-width: 992px) {
@@ -264,11 +157,8 @@
     padding-top: 25px;
     padding-bottom: 25px;
   }
-  .menu li {
-    font-size: 14px;
-  }
-  .menu li a {
-    padding: 8px;
+  .menu {
+    overflow-x: auto;
   }
   .header-form-search {
     position: relative;
@@ -294,7 +184,7 @@
     border-radius: 8px;
     padding: 7px 27px 7px 7px;
     width: 100%;
-    margin-top: 4px;
+    margin-top: 2px;
   }
   .header-form-search .btn-search {
     height: 20px;
@@ -310,60 +200,11 @@
   }
   .main .slider {
     text-align: start;
-    height: 660px;
   }
 }
 @media (min-width: 1200px) {
   .container {
     max-width: 1170px;
-  }
-  .col-lg-1 {
-    flex: 0 0 8.33333%;
-    max-width: 8.33333%;
-  }
-  .col-lg-2 {
-    flex: 0 0 16.66667%;
-    max-width: 16.66667%;
-  }
-  .col-lg-3 {
-    flex: 0 0 25%;
-    max-width: 25%;
-  }
-  .col-lg-4 {
-    flex: 0 0 33.33333%;
-    max-width: 33.33333%;
-  }
-  .col-lg-5 {
-    flex: 0 0 41.66667%;
-    max-width: 41.66667%;
-  }
-  .col-lg-6 {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-  .col-lg-7 {
-    flex: 0 0 58.33333%;
-    max-width: 58.33333%;
-  }
-  .col-lg-8 {
-    flex: 0 0 66.66667%;
-    max-width: 66.66667%;
-  }
-  .col-lg-9 {
-    flex: 0 0 75%;
-    max-width: 75%;
-  }
-  .col-lg-10 {
-    flex: 0 0 83.33333%;
-    max-width: 83.33333%;
-  }
-  .col-lg-11 {
-    flex: 0 0 91.66667%;
-    max-width: 91.66667%;
-  }
-  .col-lg-12 {
-    flex: 0 0 100%;
-    max-width: 100%;
   }
 }
 @media (max-width: 992px) {
